# finModules

./: README.md  calcFarm
Bonder/: BM  bm.cpp  calc.cpp  calcFarm  newCalc.cpp  test.cpp  vis.py
FinToys/: a.out  header.h  lectural.cpp  product.h  tester.ipynb  under.cpp  under.h
FinToys/legacy/: header.h  lectural.cpp  product.hpp  under.cpp  under.hpp
FinToys/legacy/utils/: a.out  main.cpp  numpy.cpp
FinToys/matrix/: header.h  main.cpp  matrix.cpp  matrix.hpp  tester.cpp  utils.cpp  utils.hpp
FinToys/remake/: CMakeLists.txt
FinToys/utils/: a.out  header.h  main.cpp  numpy.h
